# alpamayo

./: .gitignore  default.rviz  launch.sh  play.sh  pyproject.toml
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
src/alpamayo_r1/: test_inference.py
src/alpamayo_ros/: package.xml  setup.cfg  setup.py
src/alpamayo_ros/alpamayo_ros/: __init__.py  alpamayo_node.py
src/alpamayo_ros/launch/: alpamayo.launch.py
src/alpamayo_ros/resource/: alpamayo_ros
