<?xml version="1.0"?>
<package format="3">
  <name>alpamayo_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 nodes for running Alpamayo inference and publishing trajectories.</description>
  <maintainer email="shintaro.sakoda@tier4.jp">shintarosakoda</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
